--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -7,6 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Weather App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+        rel="stylesheet">
     <link rel="shortcut icon" href="./images/weather-app.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -30,7 +35,7 @@
                     <img src="./images/cloudy.png" alt="" height="150px" width="150px">
                 </div>
                 <div class="mt-3">
-                    <h1 class="text-center" style="font-size: 4rem;" id="weather-deg">7°c</h1>
+                    <h1 class="text-center" style="font-size: 4rem;font-weight: 600;" id="weather-deg">7°c</h1>
                     <h2 class="text-center" style="font-size: 3rem;" id="weather-city">New York</h2>
                 </div>
                 <div class="row mt-4">
@@ -41,7 +46,7 @@
                             </div>
                             <div>
 
-                                <h4 style="font-size: 1.5rem;" id="weather-hum">45%</h4>
+                                <h4 style="font-size: 1.4rem;font-weight: 600;" id="weather-hum">45%</h4>
                                 <p class="mb-0">Humidity</p>
                             </div>
                         </div>
@@ -53,7 +58,7 @@
                             </div>
                             <div>
 
-                                <h4 style="font-size: 1.5rem;" id="weather-wind">10.29 km/h</h4>
+                                <h4 style="font-size: 1.4rem;font-weight: 600;" id="weather-wind">10.29 km/h</h4>
                                 <p class="mb-0">Wind Speed</p>
                             </div>
                         </div>
