--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -21,18 +21,17 @@
     <section class="d-flex align-items-center justify-content-center " style="height: 100vh;">
         <div class="inner-div">
             <div class="p-5">
-                <form action="">
-                    <div class="w-100 d-flex align-items-center justify-content-center gap-2 ">
-                        <div class="bg-white ps-4 input-div" style="width: 90%;border-radius: 25px;">
-                            <i class="bi bi-geo-alt-fill text-danger "></i>
-                            <input type="text" id="city" for="city" name="city" class="city-input"
-                                placeholder="Enter City Name">
-                        </div>
-                        <button type="submit" class="city-btn rounded-circle "><i class="bi bi-search"></i></button>
+
+                <div class="w-100 d-flex align-items-center justify-content-center gap-2 ">
+                    <div class="bg-white ps-4 input-div" style="width: 90%;border-radius: 25px;">
+                        <i class="bi bi-geo-alt-fill text-danger "></i>
+                        <input type="text" id="w-city" class="city-input" placeholder="Enter City Name" value="vellore">
                     </div>
-                </form>
+                    <button id="search-btn" class="city-btn rounded-circle "><i class="bi bi-search"></i></button>
+                </div>
+
                 <div class="d-flex align-items-center justify-content-center mt-2">
-                    <img src="./images/cloudy.png" alt="" height="150px" width="150px">
+                    <img src="./images/cloudy.png" alt="" height="150px" width="150px" id="weather-type">
                 </div>
                 <div class="mt-3">
                     <h1 class="text-center" style="font-size: 4rem;font-weight: 600;" id="weather-deg">7°c</h1>
